--- a/inz/bibliografia.bib
+++ b/inz/bibliografia.bib
@@ -57,3 +57,26 @@ YEAR = 2000
   howpublished = "\url{http://pl.wikipedia.org/wiki/XML}",
   note = "[Online; dostęp 16.11.2014]"
 }
+@misc{java.mvc,
+  title = {{Java MVC}},
+  howpublished = "\url{http://www.oracle.com/technetwork/articles/javase/index-142890.html}",
+  note = "[Online; dostęp 26.11.2014]"
+}
+
+@misc{java.mvc.grafika,
+  title = {{Java MVC}},
+  howpublished = "\url{http://www.javatpoint.com/model-1-and-model-2-mvc-architecture}",
+  note = "[Online; dostęp 26.11.2014]"
+}
+@misc{tomcat.org,
+  title = {{Tomcat.org}},
+  howpublished = "\url{http://tomcat.apache.org/}",
+  note = "[Online; dostęp 26.11.2014]"
+}
+@misc{Mysql.com,
+  title = {{MySQL}},
+  howpublished = "\url{http://dev.mysql.com/doc/refman/5.6/en/introduction.html}",
+  note = "[Online; dostęp 26.11.2014]"
+}
+
+
